WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301832
REGRESSION(
299927@main
): Command-clicking Reddit link no longer opens new tab
https://bugs.webkit.org/show_bug.cgi?id=301832
Summary
REGRESSION(299927@main): Command-clicking Reddit link no longer opens new tab
Chris Dumez
Reported
2025-11-02 16:51:22 PST
Command-clicking Reddit link no longer opens new tab since
299927@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-11-02 16:51:35 PST
<
rdar://162982187
>
Chris Dumez
Comment 2
2025-11-02 18:09:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53320
EWS
Comment 3
2025-11-03 00:59:09 PST
Committed
302468@main
(0a26e2324b05): <
https://commits.webkit.org/302468@main
> Reviewed commits have been landed. Closing PR #53320 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug